identity view update

--- a/Door-To-Gate/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Door-To-Gate/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model DoorToGate.AccountViewModels.ExternalLoginConfirmationViewModel
+﻿@model Door_To_Gate.Models.AccountViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewData["Title"] = "Register";
 }
