--- a/Door-To-Gate/Views/Account/ResetPassword.cshtml
+++ b/Door-To-Gate/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model DoorToGate.AccountViewModels.ResetPasswordViewModel
+﻿@model Door_To_Gate.Models.AccountViewModels.ResetPasswordViewModel
 @{
     ViewData["Title"] = "Reset password";
 }
