--- a/Door-To-Gate/Views/Account/Register.cshtml
+++ b/Door-To-Gate/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model DoorToGate.AccountViewModels.RegisterViewModel
+﻿@model Door_To_Gate.Models.AccountViewModels.RegisterViewModel
 @{
     ViewData["Title"] = "Register";
 }
